# breez-sdk-liquid

cli/src/: commands.rs  main.rs
lib/: Cargo.toml
lib/bindings/: Cargo.toml
lib/bindings/langs/android/lib/src/main/kotlin/breez_sdk_liquid_notification/job/: NwcEvent.kt
lib/bindings/langs/flutter/breez_sdk_liquid/include/: breez_sdk_liquid.h
lib/bindings/langs/swift/Sources/BreezSDKLiquid/Task/: NwcEvent.swift
lib/bindings/src/: breez_sdk_liquid.udl  lib.rs
lib/core/: Cargo.toml
lib/core/src/: bindings.rs  frb_generated.rs  lib.rs  model.rs  sdk.rs
lib/core/src/nwc/: handler.rs  mod.rs  persist.rs  relay.rs
lib/core/src/test_utils/: sdk.rs
lib/plugins/nwc/: Cargo.toml
lib/plugins/nwc/src/: config.rs  handler.rs  lib.rs  nwc.rs  persist.rs
lib/wasm/src/: lib.rs  model.rs
